--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "huggingface-hub>=0.20.0",
     "safetensors>=0.4.0",
     "transformers>=4.57.6",
+    "fsspec>=2025.10.0",
 ]
 
 [project.optional-dependencies]
