feat(framework): add rejected samples collection for deep dive analysis
Implement comprehensive rejected samples tracking across the data pipeline
framework to enable deep dive analysis of filtered and deduplicated records.

Key changes:
- Add RejectedSamplesConfig for configuring rejected samples collection
- Extend DedupBackend to track representative sample IDs for duplicates
- Add BatchResult and WorkerBatchResult dataclasses for structured results
- Implement process_batch_with_rejected methods in Operator, Filter, and
  Deduplicator classes to capture rejection metadata
- Update RayWorker to support rejected samples writing with separate writer
- Add _rejection_details field containing reason, operator, and dedup info
- Configure rejected samples output path derived from main output path

--- a/configs/z_image.yaml
+++ b/configs/z_image.yaml
@@ -132,3 +132,11 @@ executor:
   # num_cpus: Optional - Only for local development to limit Ray CPU usage.
   # In distributed clusters, CPU is managed by the cluster itself.
   # Leave unset to let Ray auto-detect available CPUs.
+
+  # Rejected samples collection for deep dive analysis
+  # When enabled, samples filtered out by Filter operators or removed by Deduplicator
+  # operators are saved separately with rejection metadata (_rejection_reason, _rejected_by, etc.)
+  rejected_samples:
+    enabled: true  # Set to true to enable rejected samples collection
+    # output_path: "./parquet_data_rejected"  # Optional: custom output path (defaults to data_writer.output_path + "_rejected")
+    # writer_type: ParquetDataWriter  # Optional: custom writer type (defaults to data_writer.type)
