feat(text): add CommonCrawl text extraction with Rust-accelerated WARC parsing
Major additions for text data pipeline support:

- Add Rust WARC parser with dom_smoothie for HTML text extraction
- Refactor CommonCrawlLoader to use Rust-accelerated processing
- Add URLFilter and TextLengthFilter for RefinedWeb-style filtering
- Implement lazy loading for operators to reduce import overhead
- Add loader throughput statistics and configurable backpressure control
- Rename HuggingFaceDataLoader to HuggingFaceLoader for consistency
- Update README with text pipeline documentation and status tables
- Add architecture documentation in docs/ARCHITECTURE.md

Rust text_ops module provides 5-10x faster WARC processing via:
- flate2 for gzip decompression
- Native WARC record parsing
- Parallel text extraction with rayon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ pyo3 = { version = "0.27.2", features = ["extension-module"] }
 image = "0.25"
 rayon = "1.11"
 image_hasher = "3.0"
+dom_smoothie = "0.5"
+warc = "0.3"
+
 
 [profile.release]
 opt-level = 3
