--- a/configs/example_with_report.yaml
+++ b/configs/example_with_report.yaml
@@ -2,7 +2,7 @@
 
 # Data source
 data_loader:
-  type: HuggingFaceDataLoader
+  type: HuggingFaceLoader
   params:
     dataset_name: "jp1924/Laion400m-1"
     split: "train"
